fix(recordatorios): aplicar eliminacion logica